fix(mixin): resolve conflicts and fix AsyncCatcher infinite loop
- Fix ServerLevelTickBlockMixin AsyncCatcher infinite loop by catching IllegalStateException and executing on main thread
- Remove LightPropagateAsyncMixin to resolve lighting optimization conflict (keep LightEngineAsyncMixin with better features)
- Update UniversalAiFamilyTickMixin to respect brain throttle state for AI consistency
- Remove PathfindingBudgetMixin and related config to resolve pathfinding conflict
- Add FEATURE_ANALYSIS.md for comprehensive feature analysis and conflict documentation

Reduced Mixin count from 28 to 26, all conflicts resolved.

BREAKING CHANGE: Removed pathfinding.tick-budget config option

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -41,16 +41,11 @@ density:
   # 单区块最大实体数 / Max entities per chunk
   max-per-chunk: 80
 
-# 寻路预算 / Pathfinding Budget
-# 说明：限制每tick寻路计算量
-# Description: Limit pathfinding computations per tick
-pathfinding:
-  # 每tick预算（0=禁用）/ Budget per tick (0=disabled)
-  tick-budget: 0
-
 # AI降频 / Brain Throttle
 # 说明：静止实体降低AI更新频率
 # Description: Reduce AI update frequency for stationary entities
+# 注意：UniversalAI会自动感知降频状态，保持一致性
+# Note: UniversalAI respects throttle state automatically for consistency
 brain:
   # 启用降频 / Enable throttling
   throttle: true
