feat: add Nitori-style optimizations and improve config management
- Implemented Nitori optimization suite with virtual threads, work stealing, BlockPos caching, and optimized collections support
- Added automatic config backup and regeneration when version mismatch is detected
- Introduced centralized DebugLogger utility for consistent debug logging across the plugin
- Added fastutil dependency for high-performance collection implementations

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ spongeMixin = "0.15.5+mixin.0.8.7"
 mixinExtras = "0.4.1"
 mixinCondition = "1.0-SNAPSHOT"
 accessWiden = "1.0.0"
+fastutil = "8.5.12"
 
 [libraries]
 leavesApi = { group = "org.leavesmc.leaves", name = "leaves-api", version.ref = "leavesApi" }
@@ -15,6 +16,7 @@ leavesDevBundle = { group = "org.leavesmc.leaves", name = "dev-bundle", version.
 spongeMixin = { group = "net.fabricmc", name = "sponge-mixin", version.ref = "spongeMixin" }
 mixinExtras = { group = "io.github.llamalad7", name = "mixinextras-common", version.ref = "mixinExtras" }
 mixinCondition = { group = "org.leavesmc", name = "leaves-plugin-mixin-condition", version.ref = "mixinCondition" }
+fastutil = { group = "it.unimi.dsi", name = "fastutil", version.ref = "fastutil" }
 
 [plugins]
 leavesweightUserdev = { id = "org.leavesmc.leavesweight.userdev", version.ref = "leavesweightUserdev" }
